# stimpyp

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-document.txt  requirements.txt
.github/workflows/: python-publish.yml  python-unittest.yml
doc/: gen_api.py
doc/source/: conf.py  index.rst
doc/source/api/: stimpyp.parser.baselog.rst  stimpyp.parser.baseprot.rst  stimpyp.parser.camlog.rst  stimpyp.parser.event.rst  stimpyp.parser.math_eval.rst  stimpyp.parser.preference.rst  stimpyp.parser.protocol_parser.rst  stimpyp.parser.rst  stimpyp.parser.session.rst  stimpyp.parser.stimpy_core.rst  stimpyp.parser.stimpy_git.rst  stimpyp.parser.stimpy_pyv.rst  stimpyp.parser.stimulus.rst  stimpyp.parser.util.rst  stimpyp.rst
doc/source/notebooks/: example_parsing.ipynb
docs/: gen_api.py
docs/source/: conf.py  index.rst
docs/source/api/: stimpyp.base.rst  stimpyp.camlog.rst  stimpyp.dataset.rst  stimpyp.dataset.treadmill.rst  stimpyp.event.rst  stimpyp.log_config.rst  stimpyp.math_eval.rst  stimpyp.parser.base.rst  stimpyp.parser.baselog.rst  stimpyp.parser.baseprot.rst  stimpyp.parser.camlog.rst  stimpyp.parser.event.rst  stimpyp.parser.math_eval.rst  stimpyp.parser.preference.rst  stimpyp.parser.protocol_parser.rst  stimpyp.parser.pyvstim.rst  stimpyp.parser.rst  stimpyp.parser.session.rst  stimpyp.parser.stimpy_core.rst  stimpyp.parser.stimpy_git.rst  stimpyp.parser.stimpy_pyv.rst  stimpyp.parser.stimulus.rst  stimpyp.parser.util.rst  stimpyp.plot.rst  stimpyp.preference.rst  stimpyp.protocol_parser.rst  stimpyp.pyvstim.rst  stimpyp.session.rst  stimpyp.stim.rst  stimpyp.stimpy_core.rst  stimpyp.stimpy_git.rst  stimpyp.stimpy_pygame.rst  stimpyp.stimulus.rst
docs/source/get_start/: camlog.rst  index.rst  preference.rst  protocol.rst  pyvstim.rst  riglog.rst  stimlog.rst  utilities.rst
src/stimpyp/: __init__.py  _type.py  _util.py  base.py  camlog.py  event.py  log_config.py  math_eval.py  plot.py  preference.py  protocol_parser.py  pygame_helper.py  pyvstim.py  session.py  stimpy_core.py  stimpy_git.py  stimpy_pygame.py
src/stimpyp/dataset/: treadmill.py
src/stimpyp/parser/: __init__.py  base.py  baselog.py  baseprot.py  camlog.py  event.py  preference.py  protocol_parser.py  pyvstim.py  session.py  stimpy_core.py  stimpy_git.py  stimpy_pyv.py  stimulus.py  util.py
test/: test_circular_pyv.py  test_darkness_bit.py  test_protocol_parser.py  test_pyvstim_parser.py  test_sftfdir_bit.py  test_stimpy_bitbucket_parser.py  test_stimpy_github_parser.py
test/unit/: _dataset.py  test_camlog.py  test_circular_pyv.py  test_darkness_bit.py  test_protocol.py  test_protocol_parser.py  test_riglog.py  test_sftfdir_bit.py  test_stimlog.py  test_vr.py
